--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,21 +26,13 @@ jobs:
       - name: Ensure Go Is Properly Installed
         run: go version
 
-      - name: Connect to DockerHub
-        uses: docker/login-action@v2
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and Push
-        uses: docker/build-push-action@v4
-        with:
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/go-contanerized:latest
+          go-version: '1.20'
+  
+      - name: Build
+        run: go build -v ./...
 
       - name: Test
         run: go test -v ./...
