--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,8 +31,21 @@ jobs:
         with:
           go-version: '1.20'
   
-      - name: Build
-        run: go build -v ./...
+      - name: Connect to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and Push
+        uses: docker/build-push-action@v4
+        with:
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/go-contanerized:latest
 
       - name: Test
         run: go test -v ./...
