feat: update main.go file to cmd

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,4 +48,4 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/go-contanerized:latest
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v ./cmd/...
