--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,6 +39,9 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        
+      - name: Install dependencies
+        run: go get -v ./...
 
       - name: Build and Push
         uses: docker/build-push-action@v4
