--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,23 +31,11 @@ jobs:
         with:
           go-version: '1.20'
   
-      - name: Connect to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Install dependencies
         run: go get -v ./...
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/go-contanerized:latest .
-
-      - name: Push Docker image to registry
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/go-contanerized:latest
+      - name: Build
+        run: go build -o ./bin/cmd/...
 
       - name: Test
         run: go test -v ./cmd/...
