--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,11 +31,14 @@ jobs:
         with:
           go-version: '1.20'
   
-      - name: Install dependencies
-        run: go get -v ./...
+      - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+      with:
+        lfs: true
 
-      - name: Build
-        run: go build -o ./bin/cmd/...
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
 
       - name: Test
-        run: go test -v ./cmd/...
+        run: go test -cover -short ./...
