--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,21 +31,14 @@ jobs:
         with:
           go-version: '1.20'
   
-      - name: Connect to DockerHub
-        uses: docker/login-action@v2
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          lfs: true
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and Push
-        uses: docker/build-push-action@v4
-        with:
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/go-contanerized:latest
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
 
       - name: Test
-        run: go test -v ./cmd/...
+        run: go test -cover -short ./...
